--- a/config/AFNO.yaml
+++ b/config/AFNO.yaml
@@ -35,7 +35,7 @@ full_field: &FULL_FIELD
   normalization: 'zscore' #options zscore (minmax not supported) 
   train_data_path: '/pscratch/sd/j/jpathak/wind/train'
   valid_data_path: '/pscratch/sd/j/jpathak/wind/test'
-  inf_data_path: '/pscratch/sd/j/jpathak/wind/out_of_sample' # test set path for inference
+  inf_data_path: '/content/drive/Shareddrives/CS 231N (DuMBies)/FCN/FourCastNet/out_of_sample data/2018.h5'   # '/pscratch/sd/j/jpathak/wind/out_of_sample' # test set path for inference
   exp_dir: '/pscratch/sd/j/jpathak/ERA5_expts_gtc/wind'
   time_means_path:   '/pscratch/sd/j/jpathak/wind/time_means.npy'
   global_means_path: '/pscratch/sd/j/jpathak/wind/global_means.npy'
@@ -73,10 +73,10 @@ afno_backbone: &backbone
   exp_dir: '/pscratch/sd/s/shas1693/results/era5_wind'
   train_data_path: '/pscratch/sd/s/shas1693/data/era5/train'
   valid_data_path: '/pscratch/sd/s/shas1693/data/era5/test'
-  inf_data_path:   '/pscratch/sd/s/shas1693/data/era5/out_of_sample'
-  time_means_path:   '/pscratch/sd/s/shas1693/data/era5/time_means.npy'
-  global_means_path: '/pscratch/sd/s/shas1693/data/era5/global_means.npy'
-  global_stds_path:  '/pscratch/sd/s/shas1693/data/era5/global_stds.npy'
+  inf_data_path:   '/content/drive/Shareddrives/CS 231N (DuMBies)/FCN/FourCastNet/out_of_sample data'   #'/pscratch/sd/s/shas1693/data/era5/out_of_sample'
+  time_means_path:   '/content/drive/Shareddrives/CS 231N (DuMBies)/FCN/FourCastNet/stats_v0/time_means.npy'  # '/pscratch/sd/s/shas1693/data/era5/time_means.npy'
+  global_means_path: '/content/drive/Shareddrives/CS 231N (DuMBies)/FCN/FourCastNet/stats_v0/global_means.npy'  # '/pscratch/sd/s/shas1693/data/era5/global_means.npy'
+  global_stds_path:  '/content/drive/Shareddrives/CS 231N (DuMBies)/FCN/FourCastNet/stats_v0/global_stds.npy'  # '/pscratch/sd/s/shas1693/data/era5/global_stds.npy'
 
 afno_backbone_orography: &backbone_orography 
   <<: *backbone
@@ -91,7 +91,7 @@ afno_backbone_finetune:
   max_epochs: 50
   pretrained: !!bool True
   two_step_training: !!bool True
-  pretrained_ckpt_path: '/pscratch/sd/s/shas1693/results/era5_wind/afno_backbone/0/training_checkpoints/best_ckpt.tar'
+  pretrained_ckpt_path: # '/pscratch/sd/s/shas1693/results/era5_wind/afno_backbone/0/training_checkpoints/best_ckpt.tar'
 
 perturbations:
   <<: *backbone
