--- a/config/AFNO.yaml
+++ b/config/AFNO.yaml
@@ -19,9 +19,9 @@ full_field: &FULL_FIELD
   N_grid_channels: 0
   gridtype: 'sinusoidal' #options 'sinusoidal' or 'linear'
   roll: !!bool False
-  max_epochs: 50
-  batch_size: 64
-
+  max_epochs: 2
+  batch_size: 2
+19
   #afno hyperparams
   num_blocks: 8
   nettype: 'afno'
@@ -63,20 +63,20 @@ afno_backbone: &backbone
   <<: *FULL_FIELD
   log_to_wandb: !!bool True
   lr: 5E-4
-  batch_size: 64
-  max_epochs: 150
+  batch_size: 2
+  max_epochs: 2
   scheduler: 'CosineAnnealingLR'
-  in_channels: [0, 1 ,2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
-  out_channels: [0, 1 ,2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
+  in_channels: [0]
+  out_channels: [0]
   orography: !!bool False
   orography_path: None 
-  exp_dir: '/home/ubuntu/FourCastNet/exp_dir'
-  train_data_path: '/pscratch/sd/s/shas1693/data/era5/train'
-  valid_data_path: '/pscratch/sd/s/shas1693/data/era5/test'
-  inf_data_path:   '/content/drive/Shareddrives/CS231N/FCN/FourCastNet/out_of_sample data'   #'/pscratch/sd/s/shas1693/data/era5/out_of_sample'
-  time_means_path:   '/content/drive/Shareddrives/CS231N/FCN/FourCastNet/stats_v0/time_means.npy'  # '/pscratch/sd/s/shas1693/data/era5/time_means.npy'
-  global_means_path: '/content/drive/Shareddrives/CS231N/FCN/FourCastNet/stats_v0/global_means.npy'  # '/pscratch/sd/s/shas1693/data/era5/global_means.npy'
-  global_stds_path:  '/content/drive/Shareddrives/CS231N/FCN/FourCastNet/stats_v0/global_stds.npy'  # '/pscratch/sd/s/shas1693/data/era5/global_stds.npy'
+  exp_dir: 'exp'
+  train_data_path: '/home/ubuntu/train'
+  valid_data_path: '/home/ubuntu/valid'
+  inf_data_path:   '/home/ubuntu/inf'   #'/pscratch/sd/s/shas1693/data/era5/out_of_sample'
+  time_means_path:   '/home/ubuntu/FourCastNet/stats_v0/time_means.npy'  # '/pscratch/sd/s/shas1693/data/era5/time_means.npy'
+  global_means_path: '/home/ubuntu/FourCastNet/stats_v0/global_means.npy'  # '/pscratch/sd/s/shas1693/data/era5/global_means.npy'
+  global_stds_path:  '/home/ubuntu/FourCastNet/stats_v0/global_stds.npy'  # '/pscratch/sd/s/shas1693/data/era5/global_stds.npy'
 
 afno_backbone_orography: &backbone_orography 
   <<: *backbone
