--- a/config/GFN.yaml
+++ b/config/GFN.yaml
@@ -19,8 +19,8 @@ full_field: &FULL_FIELD
   N_grid_channels: 0
   gridtype: 'sinusoidal' #options 'sinusoidal' or 'linear'
   roll: !!bool False
-  max_epochs: 50
-  batch_size: 64
+  max_epochs: 2
+  batch_size: 2
 
   #gfn hyperparams
   num_blocks: 8
@@ -30,16 +30,16 @@ full_field: &FULL_FIELD
   modes: 32
   #options default, residual
   target: 'default' 
-  in_channels: [0,1]
-  out_channels: [0,1] #must be same as in_channels if prediction_type == 'iterative'
+  in_channels: [0]
+  out_channels: [0] #must be same as in_channels if prediction_type == 'iterative'
   normalization: 'zscore' #options zscore (minmax not supported) 
-  train_data_path: '/pscratch/sd/j/jpathak/wind/train'
-  valid_data_path: '/pscratch/sd/j/jpathak/wind/test'
-  inf_data_path: '/content/drive/Shareddrives/CS 231N (DuMBies)/FCN/FourCastNet/out_of_sample data/2018.h5'   # '/pscratch/sd/j/jpathak/wind/out_of_sample' # test set path for inference
-  exp_dir: '/pscratch/sd/j/jpathak/ERA5_expts_gtc/wind'
-  time_means_path:   '/pscratch/sd/j/jpathak/wind/time_means.npy'
-  global_means_path: '/pscratch/sd/j/jpathak/wind/global_means.npy'
-  global_stds_path:  '/pscratch/sd/j/jpathak/wind/global_stds.npy'
+  train_data_path: '/home/ubuntu/train/1980_u10_500ts.h5'
+  valid_data_path: '/home/ubuntu/valid/2016_u10_500ts.h5'
+  inf_data_path: '/home/ubuntu/inf/2018_u10_500ts.h5'   # '/pscratch/sd/j/jpathak/wind/out_of_sample' # test set path for inference
+  exp_dir: 'exp'
+  time_means_path:   '/home/ubuntu/FourCastNet/stats_v0/time_means.npy'
+  global_means_path: '/home/ubuntu/FourCastNet/stats_v0/global_means.npy'
+  global_stds_path:  '/home/ubuntu/FourCastNet/stats_v0/global_stds.npy'
 
   orography: !!bool False
   orography_path: None
@@ -63,25 +63,25 @@ gfn_backbone: &backbone
   <<: *FULL_FIELD
   log_to_wandb: !!bool True
   lr: 5E-4
-  batch_size: 64
-  max_epochs: 150
+  batch_size: 3
+  max_epochs: 10
   scheduler: 'CosineAnnealingLR'
-  in_channels: [0, 1 ,2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
-  out_channels: [0, 1 ,2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
+  in_channels: [0]
+  out_channels: [0]
   orography: !!bool False
   orography_path: None 
-  exp_dir: '/pscratch/sd/s/shas1693/results/era5_wind'
-  train_data_path: '/pscratch/sd/s/shas1693/data/era5/train'
-  valid_data_path: '/pscratch/sd/s/shas1693/data/era5/test'
-  inf_data_path:   '/content/drive/Shareddrives/CS 231N (DuMBies)/FCN/FourCastNet/out_of_sample data'   #'/pscratch/sd/s/shas1693/data/era5/out_of_sample'
-  time_means_path:   '/content/drive/Shareddrives/CS 231N (DuMBies)/FCN/FourCastNet/stats_v0/time_means.npy'  # '/pscratch/sd/s/shas1693/data/era5/time_means.npy'
-  global_means_path: '/content/drive/Shareddrives/CS 231N (DuMBies)/FCN/FourCastNet/stats_v0/global_means.npy'  # '/pscratch/sd/s/shas1693/data/era5/global_means.npy'
-  global_stds_path:  '/content/drive/Shareddrives/CS 231N (DuMBies)/FCN/FourCastNet/stats_v0/global_stds.npy'  # '/pscratch/sd/s/shas1693/data/era5/global_stds.npy'
+  exp_dir: 'exp'
+  train_data_path: '/home/ubuntu/train'
+  valid_data_path: '/home/ubuntu/valid'
+  inf_data_path:   '/home/ubuntu/inf'   #'/pscratch/sd/s/shas1693/data/era5/out_of_sample'
+  time_means_path:   '/home/ubuntu/FourCastNet/stats_v0/time_means.npy'  # '/pscratch/sd/s/shas1693/data/era5/time_means.npy'
+  global_means_path: '/home/ubuntu/FourCastNet/stats_v0/global_means.npy'  # '/pscratch/sd/s/shas1693/data/era5/global_means.npy'
+  global_stds_path:  '/home/ubuntu/FourCastNet/stats_v0/global_stds.npy'  # '/pscratch/sd/s/shas1693/data/era5/global_stds.npy'
 
 gfn_backbone_orography: &backbone_orography 
   <<: *backbone
   orography: !!bool True
-  orography_path: '/pscratch/sd/s/shas1693/data/era5/static/orography.h5'
+  # orography_path: '/pscratch/sd/s/shas1693/data/era5/static/orography.h5'
 
 gfn_backbone_finetune: 
   <<: *backbone
@@ -100,7 +100,7 @@ perturbations:
   max_epochs: 50
   pretrained: !!bool True
   two_step_training: !!bool True
-  pretrained_ckpt_path: '/pscratch/sd/j/jpathak/ERA5_expts_gtc/wind/afno_20ch_bs_64_lr5em4_blk_8_patch_8_cosine_sched/1/training_checkpoints/best_ckpt.tar'
+  # pretrained_ckpt_path: '/pscratch/sd/j/jpathak/ERA5_expts_gtc/wind/afno_20ch_bs_64_lr5em4_blk_8_patch_8_cosine_sched/1/training_checkpoints/best_ckpt.tar'
   prediction_length: 24
   ics_type: "datetime"
   n_perturbations: 100 
@@ -109,23 +109,9 @@ perturbations:
   save_raw_forecasts: !!bool False
   date_strings: ["2018-01-01 00:00:00"] 
   inference_file_tag: " "
-  valid_data_path: "/pscratch/sd/j/jpathak/ "
+  # valid_data_path: "/pscratch/sd/j/jpathak/ "
   perturb: !!bool True
   n_level: 0.3
 
-### PRECIP ###
-precip: &precip
-  <<: *backbone
-  in_channels: [0, 1 ,2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
-  out_channels: [0]
-  nettype: 'gfn'
-  nettype_wind: 'gfn'
-  log_to_wandb: !!bool True
-  lr: 2.5E-4
-  batch_size: 64
-  max_epochs: 25
-  precip: '/pscratch/sd/p/pharring/ERA5/precip/total_precipitation'
-  time_means_path_tp: '/pscratch/sd/p/pharring/ERA5/precip/total_precipitation/time_means.npy'
-  model_wind_path: '/pscratch/sd/s/shas1693/results/era5_wind/afno_backbone_finetune/0/training_checkpoints/best_ckpt.tar'
-  precip_eps: !!float 1e-5
+
 
